Add visualization of texts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "python.analysis.extraPaths": [
         "/home/burak/catkin_ws_deformable/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "random": "cpp"
+    }
 }
